docs:professional README with architecture and setup guide